--- a/src/app/dashboard/assigned-leads/assigned-leads.component.html
+++ b/src/app/dashboard/assigned-leads/assigned-leads.component.html
@@ -1,162 +1,174 @@
-<div class="row">
-    <div class="col-lg-12 col-sm-12 col-md-2">
-        <app-header></app-header>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-2 col-lg-2 col-sm-2">
-        <app-dashboard></app-dashboard>
-    </div>
-    <div class="col-md-9 col-lg-9 col-sm-9">
-        <div class="both">
-            <h1><b>Assigned Leads Table</b></h1>
-            <br>
-            <div class="">
+<app-header></app-header>
+<div id="wrapper">
+    <app-dashboard (widthEmittedEvent)="contentWidthEmitted($event)"></app-dashboard>
+    <div id="content-wrapper" class="d-flex flex-column" #content>
+        <div id="content">
+
+            <div class="container-fluid">
+                <h1 class="h3 mb-2 text-gray-800">Assigned Leads Table</h1>
+
                 <div class="row">
-                    <div class="col-3">
-                        <ng-select [items]="options" bindLabel="name" bindValue="value" class="mr-2 ml-2" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
-                        </ng-select>
-                    </div>
-                    <div class="col-3">
-                        <input class="form-control" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId">
-                    </div>
-
-
-                    <div class="col-2 ">
-
-                        <button onclick="window.print()" class="btn btn-primary ss">Print</button>
-
-                    </div>
-                    <div class="col-2">
-                        <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
+                    <div class="col-12 mb-4 mt-4">
+                        <div class="">
+                            <div class="row">
+                                <div class="col-3">
+                                    <ng-select [items]="options" bindLabel="name" bindValue="value" class="mr-2 ml-2"
+                                        placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)"
+                                        [clearable]="false">
+                                    </ng-select>
+                                </div>
+                                <div class="col-3">
+                                    <input class="form-control" type="text" placeholder="Search {{ placeholder }}"
+                                        [(ngModel)]="refId">
+                                </div>
+                                <div class="ml-5">
+                                    <input type="date" class="form-control" placeholder="Start Date" (change)="changeStartDate($event)">
+                                </div>
+                                <div class="ml-5">
+                                    <input type="date" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
+                                </div>
+            
+            
+                                <div class="col-2 ">
+            
+                                    <button onclick="window.print()" class="btn btn-primary ss">Print</button>
+            
+                                </div>
+                                <div class="col-2">
+                                    <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
+                                </div>
+                            </div>
+                        </div>
+            
+                        <div class="table-container mb-5 mt-4">
+                            <table class="table table-hover">
+                                <thead>
+                                    <th scope="col"> </th>
+                                    <th scope="col">ID</th>
+                                    <th>Added By</th>
+                                    <th scope="col">Purpose</th>
+                                    <th scope="col">Client Details</th>
+                                    <th scope="col">Location</th>
+                                    <th scope="col">Land Area</th>
+            
+                                    <th scope="col">Demand</th>
+                                    <th scope="col">Operations</th>
+                                </thead>
+            
+                                <tbody>
+                                    <tr
+                                        *ngFor="let user of user | filterlist: selectedOption:refId | dateFilter: startDate:endDate | paginate:{itemsPerPage:10,currentPage:p}; ">
+                                        <td> <span *ngIf="user.priority == 'Super Hot' else hot"><img class="super-hot"
+                                                    src="\assets\icons\red-flag.png"></span>
+                                            <ng-template #hot>
+                                                <img class="super-hot" src="\assets\icons\flag_yellow.png">
+                                            </ng-template>
+                                        </td>
+                                        <td>{{ user.refId }}</td>
+                                        <td>{{user.added_ByName}}</td>
+                                        <td>{{ user.property_purpose }}</td>
+                                        <td>
+                                            <b>Name : </b>{{ user.client_name |titlecase }} <br />
+                                            <b>Phone : </b>{{ user.client_number }} <br />
+                                            <b>Name : </b>{{ user.client_type |titlecase }}
+                                        </td>
+                                        <td>
+                                            {{ user.city[0]?.city }}<span></span><br /><span class="badge badge-light"
+                                                *ngFor="let loc of user.location">{{ loc.location }},
+                                            </span>
+                                        </td>
+            
+                                        <td *ngIf="user?.area != null; else elseBlockArea">
+                                            <span>{{ user?.area + " - " + user?.area_unit }}</span>
+                                        </td>
+                                        <ng-template #elseBlockArea>
+                                            <td>
+                                                <span *ngIf="
+                            user?.max_area == null || user?.min_area == null;
+                            else elseBlockArea2
+                            ">
+                                                    <span>None</span>
+                                                </span>
+                                                <ng-template #elseBlockArea2>
+                                                    <span><b>Max:</b> {{ user?.max_area + " - " + user?.area_unit
+                                                        }}<br /><b>Min:</b>
+                                                        {{ user?.min_area + " - " + user?.area_unit }}</span>
+                                                </ng-template>
+                                            </td>
+                                        </ng-template>
+            
+                                        <td *ngIf="user.demand_price == null else elseBlockDemand"><b>Max:</b> {{ user.max_price
+                                            }}<br><b>Min:</b> {{ user.min_price }}</td>
+                                        <ng-template #elseBlockDemand>
+                                            <td>{{ user.demand_price }}</td>
+                                        </ng-template>
+                                        <td>
+                                            <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal"
+                                                data-target="#exampleModal1"></i>
+            
+                                            <i class="fas fa-exchange-alt ml-2" (click)="setCurrentRow(user)" data-toggle="modal"
+                                                data-target="#myModal"></i>
+                                        </td>
+                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog"
+                                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">
+                                                            Delete Confirmation
+                                                        </h5>
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                            <span aria-hidden="true">&times;</span>
+                                                        </button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Are you sure you want to delete it?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                            Close
+                                                        </button>
+                                                        <button type="button" class="btn btn-danger" data-dismiss="modal"
+                                                            (click)="deleteAssignedLead()">
+                                                            Delete
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <pagination-controls (pageChange)="p = $event"></pagination-controls>
                     </div>
                 </div>
             </div>
-
-            <div class="table-container mb-5 mt-4">
-                <table class="table table-hover">
-                    <thead>
-                        <th scope="col"> </th>
-                        <th scope="col">ID</th>
-                        <th>Added By</th>
-                        <th scope="col">Purpose</th>
-                        <th scope="col">Client Details</th>
-                        <th scope="col">Location</th>
-                        <th scope="col">Land Area</th>
-
-                        <th scope="col">Demand</th>
-                        <th scope="col">Operations</th>
-                    </thead>
-
-                    <tbody>
-                        <tr *ngFor="let user of user | filterlist: selectedOption:refId | paginate:{itemsPerPage:10,currentPage:p}; ">
-                            <td> <span *ngIf="user.priority == 'Super Hot' else hot"><img class="super-hot" src="\assets\icons\red-flag.png"></span>
-                                <ng-template #hot>
-                                    <img class="super-hot" src="\assets\icons\flag_yellow.png">
-                                </ng-template>
-                            </td>
-                            <td>{{ user.refId }}</td>
-                            <td>{{user.added_ByName}}</td>
-                            <td>{{ user.property_purpose }}</td>
-                            <td>
-                                <b>Name : </b>{{ user.client_name |titlecase }} <br />
-                                <b>Phone : </b>{{ user.client_number }} <br />
-                                <b>Name : </b>{{ user.client_type |titlecase }}
-                            </td>
-                            <td>
-                                {{ user.city[0]?.city }}<span></span><br /><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},
-              </span>
-                            </td>
-
-                            <td *ngIf="user?.area != null; else elseBlockArea">
-                                <span>{{ user?.area + " - " + user?.area_unit }}</span>
-                            </td>
-                            <ng-template #elseBlockArea>
-                                <td>
-                                    <span *ngIf="
-                user?.max_area == null || user?.min_area == null;
-                else elseBlockArea2
-                ">
-                <span>None</span>
-                                    </span>
-                                    <ng-template #elseBlockArea2>
-                                        <span><b>Max:</b> {{ user?.max_area + " - " + user?.area_unit
-                }}<br /><b>Min:</b>
-                {{ user?.min_area + " - " + user?.area_unit }}</span
-                >
-                </ng-template>
-                </td>
-                </ng-template>
-                        
-                            <!-- <td *ngIf="user.area == null else elseBlockArea"><b>Max:</b> {{ user.max_area + " - " + user.area_unit}}<br><b>Min:</b> {{ user.min_area + " - " + user.area_unit}}</td>
-                            <ng-template #elseBlockArea>
-                                <td>{{ user.area + " - " + user.area_unit}}</td>
-                            </ng-template> -->
-
-                            <td *ngIf="user.demand_price == null else elseBlockDemand"><b>Max:</b> {{ user.max_price }}<br><b>Min:</b> {{ user.min_price }}</td>
-                            <ng-template #elseBlockDemand>
-                                <td>{{ user.demand_price }}</td>
-                            </ng-template>
-                            <!-- <td>{{ user.assigned_to}}</td> -->
-                            <td>
-                                <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i>
-
-                                <i class="fas fa-exchange-alt ml-2" (click)="setCurrentRow(user)" data-toggle="modal" data-target="#myModal"></i>
-                            </td>
-                            <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">
-                                                Delete Confirmation
-                                            </h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                                        </button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete it?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                      Close
-                    </button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteAssignedLead()">
-                      Delete
-                    </button>
-            </div>
         </div>
     </div>
-</div>
-</tr>
-</tbody>
-</table>
-</div>
-<pagination-controls (pageChange)="p = $event"></pagination-controls>
-</div>
-</div>
 </div>
 
 <div class="modal" id="myModal">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
-            <!-- Modal Header -->
             <div class="modal-header">
                 <h4 class="text-center">Assigned Agents History</h4>
                 <button type="button" class="close" data-dismiss="modal">
-            &times;
-          </button>
+                    &times;
+                </button>
             </div>
 
-            <!-- Modal body -->
             <div class="modal-body">
                 <div class="card-body row">
                     <div class="col">
-                        <ng-select [items]="options2" bindLabel="name" bindValue="value" class="mr-2 ml-2" placeholder="Filter By" [(ngModel)]="selectedOption2" (change)="optionChange($event)" [clearable]="false">
+                        <ng-select [items]="options2" bindLabel="name" bindValue="value" class="mr-2 ml-2"
+                            placeholder="Filter By" [(ngModel)]="selectedOption2" (change)="optionChange($event)"
+                            [clearable]="false">
                         </ng-select>
                     </div>
                     <div class="col">
-                        <input class="form-control" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId2">
+                        <input class="form-control" type="text" placeholder="Search {{ placeholder }}"
+                            [(ngModel)]="refId2">
                     </div>
                 </div>
                 <table class="table table-hover">
@@ -169,7 +181,8 @@
                     </thead>
 
                     <tbody>
-                        <tr *ngFor="let history of row.assigned_history | orderBy: key: reverse | filterlist: selectedOption2:refId2">
+                        <tr
+                            *ngFor="let history of row.assigned_history | orderBy: key: reverse | filterlist: selectedOption2:refId2">
                             <td>{{ history.userId }}</td>
                             <td>{{ history.fullname }}</td>
                             <td>{{history.date | date}}
@@ -179,11 +192,10 @@
                 </table>
             </div>
 
-            <!-- Modal footer -->
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">
-      Close
-    </button>
+                    Close
+                </button>
             </div>
         </div>
     </div>
