--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,17 +1,64 @@
+.sidebar {
+    height: 100%;
+    width: 100px;
+    background: #353941;
+    position: fixed;
+    transition: 0.5s;
+    overflow-x: hidden;
+    white-space: nowrap;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
-li a {
-    display: block;
-    width: 60px;
+ul li {
+    width: 100%;
 }
 
-.sidebar {
-    font-size: 1rem;
+ul li a {
+    display: block;
+    padding: 0.5rem 1rem;
+}
+
+ul li a i {
+    background: #41464e;
+    margin-left: 20px;
+    font-size: 16px;
+    width: 35px;
+    height: 35px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 4px;
+    padding-top: 3px;
+}
+
+ul li a span {
+    font-size: 16px;
     font-weight: 600;
+    color: #81888a;
+    margin-left: 30px;
+}
+
+ul li:hover a span, .badge-logout {
+    color: #9fa8aa;
+}
+
+ul li:hover a i, li a:hover:before {
+    color: #38baa2;
+    text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
+}
+
+ul li a:hover>i::before {
+    display: inline-block;
+    animation: swing ease-in-out 0.5s 1 alternate;
+}
+
+ul .sidebar-divider {
+    margin: 1rem 0;
+    border-top: 1px solid #454b54;
 }
 
 @keyframes swing {
@@ -44,217 +91,60 @@ li a {
     }
 }
 
-@keyframes sonar {
-    0% {
-        transform: scale(0.9);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(2);
-        opacity: 0;
-    }
-}
-
-body {
-    font-size: 0.9rem;
-}
-
-.page-wrapper.toggled .sidebar-wrapper {
-    left: 0px;
-}
-
-@media screen and (min-width: 768px) {
-    .page-wrapper.toggled .page-content {
-        padding-left: 320px;
-    }
-}
-
-.sidebar-wrapper {
-    width: 280px;
-    height: 95%;
-    margin-top: 25px;
-    position: fixed;
-    z-index: 999;
-}
-
-.sidebar-wrapper ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.sidebar-wrapper a {
-    text-decoration: none;
-}
-
-.sidebar-wrapper .sidebar-brand {
-    padding: 10px 20px;
+.sidebar-header {
+    padding: 20px 20px 0 20px;
+    overflow: hidden;
+    margin-top: 80px;
     display: flex;
     align-items: center;
 }
 
-.sidebar-wrapper .sidebar-brand>a {
-    text-transform: uppercase;
-    font-weight: bold;
-    flex-grow: 1;
-}
-
-.sidebar-wrapper .sidebar-brand #close-sidebar {
-    cursor: pointer;
-    font-size: 20px;
-}
-
-.sidebar-wrapper .sidebar-header {
-    padding: 20px;
-    overflow: hidden;
-}
-
-.sidebar-wrapper .sidebar-header .user-pic {
-    float: left;
+.sidebar-header .user-pic {
+    flex: 1 0 auto;
     width: 60px;
     height: 60px;
-    padding: 2px;
-    margin-right: 15px;
     overflow: hidden;
+    display: inline-block;
 }
 
-.sidebar-wrapper .sidebar-header .user-pic img {
+.sidebar-header .user-pic img {
     object-fit: cover;
     height: 100%;
     width: 100%;
     border-radius: 5px;
 }
 
-.sidebar-wrapper .sidebar-header .user-info {
-    float: left;
-    margin-top: 10px;
+.sidebar-header .user-info {
+    display: inline-block;
+    margin-left: 20px;
 }
 
-.sidebar-wrapper .sidebar-header .user-info>span {
+.sidebar-header .user-info>span {
     display: block;
 }
 
-.sidebar-wrapper .sidebar-header .user-info .user-role {
-    font-size: 12px;
+.sidebar-header .user-info .user-name {
+    font-size: 16px;
 }
 
-.sidebar-wrapper .sidebar-header .user-info .user-status {
+.sidebar-header .user-info .user-status {
     font-size: 11px;
     margin-top: 4px;
 }
 
-.sidebar-wrapper .sidebar-header .user-info .user-status i {
+.sidebar-header .user-info .user-status i {
     font-size: 8px;
     margin-right: 4px;
     color: #5cb85c;
 }
 
-.sidebar-wrapper .sidebar-search>div {
-    padding: 10px 20px;
-}
-
-.sidebar-wrapper .sidebar-menu {
-    padding-bottom: 10px;
-}
-
-.sidebar-wrapper .sidebar-menu .header-menu span {
-    font-weight: bold;
-    font-size: 14px;
-    padding: 15px 20px 5px 20px;
-    display: inline-block;
-}
-
-.sidebar-wrapper .sidebar-menu ul li a {
-    display: inline-block;
-    width: 100%;
-    text-decoration: none;
-    position: relative;
-    padding: 8px 30px 8px 20px;
-}
-
-.sidebar-wrapper .sidebar-menu ul li a i {
-    margin-right: 10px;
-    font-size: 12px;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    border-radius: 4px;
-}
-
-.sidebar-wrapper .sidebar-menu ul li a:hover>i::before {
-    display: inline-block;
-    animation: swing ease-in-out 0.5s 1 alternate;
-}
-
-.sidebar-wrapper .sidebar-menu .sidebar-dropdown>a:after {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: "\f105";
-    font-style: normal;
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    background: 0 0;
-    position: absolute;
-    right: 15px;
-    top: 14px;
-}
-
-.sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu ul {
-    padding: 5px 0;
-}
-
-.sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li {
-    padding-left: 25px;
-    font-size: 13px;
-}
-
-.sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li a:before {
-    content: "\f111";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 400;
-    font-style: normal;
-    display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    margin-right: 10px;
-    font-size: 8px;
-}
-
-.sidebar-wrapper .sidebar-menu ul li a span.label,
-.sidebar-wrapper .sidebar-menu ul li a span.badge {
-    float: right;
-    margin-top: 8px;
-    margin-left: 5px;
-}
-
-.sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li a .badge,
-.sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li a .label {
-    float: right;
-    margin-top: 0px;
-}
-
-.sidebar-wrapper .sidebar-menu .sidebar-submenu {
-    display: none;
-}
-
-.sidebar-wrapper .sidebar-menu .sidebar-dropdown.active>a:after {
-    transform: rotate(90deg);
-    right: 17px;
-}
-
 .sidebar-footer {
     position: absolute;
+    left: 0;
+    right: 0;
     padding: 10px;
     width: 100%;
-    bottom: 13px;
+    bottom: 0;
     display: flex;
     margin-top: 1px;
 }
@@ -262,9 +152,11 @@ body {
 .sidebar-footer>a {
     flex-grow: 1;
     text-align: center;
-    height: 30px;
     line-height: 30px;
     position: relative;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .sidebar-footer>a .notification {
@@ -275,6 +167,38 @@ body {
 
 .sidebar-footer>a i {
     font-size: 2rem;
+    margin-left: 35px;
+}
+
+.sidebar-footer>a {
+    color: #818896;
+}
+
+.sidebar-footer>a:hover i {
+    color: #b8bfce;
+}
+
+.sidebar-footer {
+    background: #3a3f48;
+    box-shadow: 0px -1px 5px #282c33;
+    border-top: 1px solid #464a52;
+}
+
+.sidebar-footer>a:first-child {
+    border-left: none;
+}
+
+.sidebar-footer>a:last-child {
+    border-right: none;
+}
+
+.badge-warning {
+    color: #212529;
+    background: #ffc107;
+}
+
+.badge-success {
+    background: #28a745;
 }
 
 .badge-sonar {
@@ -300,142 +224,9 @@ body {
     animation: sonar 1.5s infinite;
 }
 
-.page-content {
-    margin-top: 50px;
-    margin-left: 300px;
-}
-
-@media (max-width: 991.98px) {
-    .sidebar-wrapper {
-        margin-left: -300px;
-    }
-    .page-content {
-        margin-left: 0;
-    }
-}
-
-::-webkit-scrollbar {
-    width: 5px;
-    height: 7px;
-}
-
-::-webkit-scrollbar-button {
-    width: 0px;
-    height: 0px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #525965;
-    border: 0px none #ffffff;
-    border-radius: 0px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #525965;
-}
-
-::-webkit-scrollbar-thumb:active {
-    background: #525965;
-}
-
-::-webkit-scrollbar-track {
-    background: transparent;
-    border: 0px none #ffffff;
-    border-radius: 50px;
-}
-
-::-webkit-scrollbar-track:hover {
-    background: transparent;
-}
-
-::-webkit-scrollbar-track:active {
-    background: transparent;
-}
-
-::-webkit-scrollbar-corner {
-    background: transparent;
-}
-
-.chiller-theme .sidebar-wrapper {
-    background: #31353d;
-}
-
-.chiller-theme .sidebar-wrapper .sidebar-header,
-.chiller-theme .sidebar-wrapper .sidebar-search,
-.chiller-theme .sidebar-wrapper .sidebar-menu {
-    border-bottom: 1px solid #3a3f48;
-}
-
-.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu,
-.chiller-theme .sidebar-wrapper .sidebar-search .input-group-text {
-    border-color: transparent;
-    box-shadow: none;
-}
-
-.chiller-theme .sidebar-wrapper .sidebar-header .user-info .user-role,
-.chiller-theme .sidebar-wrapper .sidebar-header .user-info .user-status,
-.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu,
-.chiller-theme .sidebar-wrapper .sidebar-search .input-group-text,
-.chiller-theme .sidebar-wrapper .sidebar-brand>a,
-.chiller-theme .sidebar-wrapper .sidebar-menu ul li a,
-.chiller-theme .sidebar-footer>a {
-    color: #818896;
-}
-
-.chiller-theme .sidebar-wrapper .sidebar-menu ul li:hover>a,
-.chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active>a,
-.chiller-theme .sidebar-wrapper .sidebar-header .user-info,
-.chiller-theme .sidebar-wrapper .sidebar-brand>a:hover,
-.chiller-theme .sidebar-footer>a:hover i {
-    color: #b8bfce;
-}
-
-.page-wrapper.chiller-theme.toggled #close-sidebar {
-    color: #bdbdbd;
-}
-
-.page-wrapper.chiller-theme.toggled #close-sidebar:hover {
-    color: #ffffff;
-}
-
-.chiller-theme .sidebar-wrapper ul li:hover a i,
-.chiller-theme .sidebar-wrapper .sidebar-dropdown .sidebar-submenu li a:hover:before,
-.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu:focus+span,
-.chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active a i {
-    color: #38baa2;
-    text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
-}
-
-.chiller-theme .sidebar-wrapper .sidebar-menu ul li a i,
-.chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown div,
-.chiller-theme .sidebar-wrapper .sidebar-search input.search-menu,
-.chiller-theme .sidebar-wrapper .sidebar-search .input-group-text {
-    background: #3a3f48;
-}
-
-.chiller-theme .sidebar-wrapper .sidebar-menu .header-menu span {
-    color: #6c7b88;
-    font-size: 0.8rem;
-}
-
-.chiller-theme .sidebar-footer {
-    background: #3a3f48;
-    box-shadow: 0px -1px 5px #282c33;
-    border-top: 1px solid #464a52;
-}
-
-.chiller-theme .sidebar-footer>a:first-child {
-    border-left: none;
-}
-
-.chiller-theme .sidebar-footer>a:last-child {
-    border-right: none;
-}
-
-.ant-layout {
-    display: flex;
-    flex: auto;
-    flex-direction: column;
-    min-height: 0;
-    background: #f0f2f5;
+.badge-logout {
+    font-size: 16px;
+    font-weight: 600;
+    color: #81888a;
+    margin-left: 40px;
 }
