--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,102 +1,95 @@
-<div class="page-wrapper chiller-theme toggled">
-    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
-    </a>
-    <nav id="sidebar" class="sidebar-wrapper">
-        <div class="sidebar-content">
-            <div class="sidebar-header">
-                <div class="user-pic">
-                    <img class="img-responsive img-rounded" src="https://bootdey.com/img/Content/avatar/avatar6.png" />
-                </div>
-                <div class="user-info">
-                    <span class="user-name">{{ tokendata?.fullname | titlecase }} </span>
-                    <span class="user-role">{{ tokendata?.access | titlecase}}</span>
-                    <span class="user-status">
-            <i class="fa fa-circle"></i>
-            <span>Online</span>
-                    </span>
-                </div>
+<!-- Sidebar -->
+<div class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar"
+    (mouseover)="toggleSidebar()" (mouseout)="toggleSidebar()" #sidebar>
+    <ul>
+
+        <div class="sidebar-header">
+            <div class="user-pic">
+                <img class="img-responsive img-rounded" src="https://bootdey.com/img/Content/avatar/avatar6.png" />
             </div>
-
-            <div class="sidebar-menu">
-                <ul>
-                    <li class="sidebar">
-                        <a routerLink="/profile">
-                            <i class="fa fa-user"></i>
-                            <span>User Profile</span>
-                        </a>
-                    </li>
-
-                    <li class="sidebar">
-                        <a routerLink="/agents">
-                            <i class="fa fa-users"></i>
-                            <span>Agents</span>
-                        </a>
-                    </li>
-                    <li class="sidebar">
-                        <a routerLink="/inventory">
-                            <i class="fas fa-file-alt"></i>
-                            <span>Inventory</span>
-                        </a>
-                    </li>
-                    <li class="sidebar">
-                        <a routerLink="/leads">
-                            <i class="fas fa-phone-volume"></i>
-                            <span>Lead</span>
-                        </a>
-                    </li>
-
-                    <li class="sidebar">
-                        <a routerLink="/both">
-                            <i class="fas fa-phone-volume"></i>
-                            <span>Both</span>
-                        </a>
-                    </li>
-
-                    <li class="sidebar">
-                        <a routerLink="/assigned-leads">
-                            <i class="fas fa-exchange-alt"></i>
-                            <!-- <i class="fas fa-phone-volume"></i> -->
-                            <span>Assigned Leads</span>
-                        </a>
-                    </li>
-                    <li class="sidebar">
-                        <a routerLink="/location">
-                            <i class="fas fa-exchange-alt"></i>
-                            <!-- <i class="fas fa-phone-volume"></i> -->
-                            <span>Location</span>
-                        </a>
-                    </li>
-                    <li class="sidebar" *ngIf="tokendata?.access  == 'super_admin'">
-                        <a routerLink="/register">
-                            <i class="fa fa-tachometer-alt"></i>
-                            <span>Register</span>
-                        </a>
-                    </li>
-                    <!-- <li class="sidebar">
-                        <a routerLink="/map">
-                            <i class="fas fa-map"></i>
-                            <span>Maps</span>
-                            <span class="badge badge-pill badge-info">New</span>
-                        </a>
-                    </li> -->
-                </ul>
-            </div>
-            <div class="sidebar-footer">
-                <a routerLink="/" *ngIf="isLogin()" (click)="logout()">
-                    <i class="fa fa-lock"></i>
-                    <span class="badge badge-pill badge-warning notification">Log out</span
-          >
-        </a>
-        <a routerLink="/profile">
-          <i class="fa fa-bell"></i>
-          <span class="badge badge-pill badge-success notification">3</span>
-                </a>
-                <a href="#">
-                    <i class="fa fa-cog"></i>
-                    <span class="badge-sonar"></span>
-                </a>
+            <div class="user-info">
+                <span class="user-name" style="color: rgb(194, 201, 211);">{{ tokendata?.fullname | titlecase }} </span>
+                <span class="user-role">{{ tokendata?.access | titlecase}}</span>
+                <span class="user-status">
+                    <i class="fa fa-circle"></i>
+                    <span>Online</span>
+                </span>
             </div>
         </div>
-    </nav>
+        <hr class="sidebar-divider" />
+
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/profile">
+                <i class="fa fa-user"></i>
+                <span>User Profile</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/agents">
+                <i class="fa fa-users"></i>
+                <span>Agents</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/inventory">
+                <i class="fa fa-file-alt"></i>
+                <span>Inventory</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/leads">
+                <i class="fa fa-phone-volume"></i>
+                <span>Lead</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/both">
+                <i class="fa fa-phone-volume"></i>
+                <span>Both</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/assigned-leads">
+                <i class="fas fa-exchange-alt"></i>
+                <span>Assigned Leads</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/location">
+                <i class="fas fa-exchange-alt"></i>
+                <span>Location</span>
+            </a>
+        </li>
+        <li class="nav-item" *ngIf="tokendata?.access  == 'super_admin'">
+            <a class="nav-link" routerLink="/register">
+                <i class="fas fa-tachometer-alt"></i>
+                <span>Register</span>
+            </a>
+        </li>
+        <hr class="sidebar-divider" />
+        <!-- Sidebar Toggler (Sidebar) -->
+        <!-- <div class="text-center d-none d-md-inline">
+            <button class="rounded-circle border-0" id="sidebarToggle"></button>
+        </div> -->
+
+        <div class="sidebar-footer">
+            <a routerLink="/" *ngIf="isLogin()" (click)="logout()">
+                <i class="fa fa-lock"></i>
+                <span class="badge-logout">Logout</span>
+            </a>
+            <!-- <a routerLink="/" *ngIf="isLogin()" (click)="logout()">
+                <i class="fa fa-lock"></i>
+                <span class="badge badge-pill badge-warning notification">Log out</span>
+            </a> -->
+            <!-- <a routerLink="/profile">
+                <i class="fa fa-bell"></i>
+                <span class="badge badge-pill badge-success notification">3</span>
+            </a>
+            <a href="#">
+                <i class="fa fa-cog"></i>
+                <span class="badge-sonar"></span>
+            </a> -->
+        </div>
+    </ul>
+    <!-- End of Sidebar -->
 </div>
