--- a/src/app/dashboard/inventory/inventory.component.css
+++ b/src/app/dashboard/inventory/inventory.component.css
@@ -1,3 +1,12 @@
+#content {
+    margin: 120px 20px;
+}
+
+#content-wrapper {
+    margin-left: 100px;
+    transition: 0.5s all;
+}
+
 .table-container {
     overflow-x: scroll;
     box-shadow: 0px 0px 20px 5px rgba(200, 200, 200, 0.69);
