--- a/src/app/dashboard/location/add-location/add-location.component.css
+++ b/src/app/dashboard/location/add-location/add-location.component.css
@@ -1,3 +1,31 @@
+#content {
+    margin: 120px 20px;
+}
+
+#content-wrapper {
+    margin-left: 100px;
+    transition: 0.5s all;
+}
+
+.btn-city {
+    margin-left: 30px;
+    width: 100px;
+    font-size: 14px;
+    background-color: #38baa2;
+    color: white;
+    border: 1px solid transparent;
+}
+
+.user-input-class {
+    margin-left: 30px;
+    /* / margin-top: 120px; / */
+}
+
+.user-class {
+    margin-left: 47px;
+    margin-top: 120px;
+}
+
 .container {
     margin-top: 70px
 }
@@ -22,7 +50,7 @@ span {
 }
 
 .invalid-feedback {
-    /* display: none; */
+    /* / display: none; / */
     width: 100%;
     margin-top: 0.25rem;
     font-size: 80%;
@@ -160,8 +188,8 @@ i:before {
 }
 
 .btn {
-    margin-top: 20px;
-    margin-left: 40px;
+    /* / margin-top: 20px; /
+    / margin-left: 40px; / */
     width: 100px;
     font-size: 14px;
     background-color: #38baa2;
@@ -190,38 +218,32 @@ i:before {
     margin-left: 20px;
 }
 
-@media only screen and (max-width: 1750px) {
-    .register {
+@media only screen and (max-width: 1650px) {
+    .user-class {
         margin-left: 50px;
     }
 }
 
-@media only screen and (max-width: 1650px) {
-    .register {
-        margin-left: 200px;
-    }
-}
-
 @media only screen and (min-width: 1200px) and (max-width: 1400px) {
-    .register {
-        margin-left: 250px;
+    .user-class {
+        margin-left: 80px;
     }
 }
 
 @media only screen and (max-width: 1200px) {
-    .register {
-        margin-left: 250px;
+    .user-class {
+        margin-left: 100px;
     }
 }
 
 @media only screen and (max-width: 1100px) {
-    .register {
-        margin-left: 250px;
+    .user-class {
+        margin-left: 120px;
     }
 }
 
 @media only screen and (max-width: 992px) {
-    .register {
-        margin-left: 20px;
+    .user-class {
+        margin-left: -80px;
     }
 }
